Hotfix markdown rendering and some spacing issues

--- a/assets/styles/components.scss
+++ b/assets/styles/components.scss
@@ -216,7 +216,7 @@
   align-items: center;
   padding: 0.5rem 0.25rem;
   padding-bottom: 0.2rem;
-  margin-right: inherit 0.75rem;
+  margin: auto 0.5rem;
   border-bottom: 3px solid transparent;
 
   svg {
