--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -216,7 +216,8 @@ button {
   @extend .button;
 }
 
-input {
+input,
+textarea {
   background: var(--color-button-bg);
   border: none;
   border-radius: var(--size-rounded-control);
